@@ -1,3 +1,9 @@
+Build 3-6 February 21, 2018
+===========================
+
+1. Added new game: All But One.
+
+
 Build 3-1 February 20, 2018
 ===========================
 
